--- a/style.css
+++ b/style.css
@@ -18,9 +18,39 @@ body, button, input, select, textarea{
   background-color:#fff;
   font-family:'Libre Baskerville', serif ;
 }
-p{
+p, ul>li{
   color:#1f1f1f;
   font-family:'Libre Baskerville', serif ;
+}
+a{
+  color:#1f1f1f;
+}
+
+/*Headings*/
+.entry-title{
+  font-size:3.5em;
+  margin:0px;
+}
+h1{
+  font-size:3em;
+  margin: 10px 0;
+}
+h2{
+  font-size:2.5em;
+  margin: 5px 0;
+}
+h3{
+  font-size:2em;
+  margin: 5px 0;
+}
+h4{
+  font-size:1.5em;
+  margin: 5px 0;
+}
+
+
+a:hover{
+  color:#696969;
 }
 h1, h2, h3, h4, h5, h6 {
     clear: both;
@@ -48,6 +78,24 @@ box-shadow: 0px 75px 133px -84px rgba(0,0,0,0.75);
   clear:both;
   margin:0 auto;
 }
+
+.thema-language-switch .lang-item a {
+    border: 1px solid #5050A2;
+    border-radius: 25px;
+    color: #5050A2;
+    padding: 15px;
+    margin: 0px;
+    transition-property: background;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
+}
+.thema-language-switch .lang-item a:hover {
+    padding: 15px;
+    color: #5050A2;
+    border-color: #8C8CE8;
+    background: #fff;
+}
+
 .entry-title a{
   color:#5050A2
 }
@@ -63,11 +111,13 @@ box-shadow: 0px 75px 133px -84px rgba(0,0,0,0.75);
 }
 .site-branding img.thema-logo {
   float:none;
-  margin: 5px;
+  margin: 0px;
+  max-width:100px;
 }
 .site-description{
   color:#5050A2;
   text-align:center;
+  font-size:1.2em;
 }
 .site-title{
   color:#5050A2;
@@ -86,10 +136,28 @@ box-shadow: 0px 75px 133px -84px rgba(0,0,0,0.75);
     bottom: 0px;
     text-align: center;
 }
+
+.main-navigation a:hover{
+  color: #fff;;
+  background-color: #8383D4;
+}
+
 .main-navigation ul{
-  color:#5050A2;
+
+  background-color: #fff;
   vertical-align:
-  padding:20px 20px;;
+  padding:20px 20px;
+  width:auto;
+}
+.main-navigation ul ul a{
+  color:#5050A2;
+}
+.main-navigation ul ul a:hover{
+  background-color:#8383D4;
+}
+.main-navigation ul ul{
+  background-color: #fff;
+  color: #5050A2;
 }
 .main-navigation{
   background-color: #5050A2;
@@ -102,4 +170,9 @@ div#secondary {
 
 .site-footer {
     background: #5050A2;
+  }
+
+  .site-footer p, .site-footer a{
+    color:#fff;
+
   }
