--- a/style.css
+++ b/style.css
@@ -174,5 +174,32 @@ div#secondary {
 
   .site-footer p, .site-footer a{
     color:#fff;
-
   }
+  button, input[type="button"], input[type="reset"], input[type="submit"] {
+    background-color: #5050A2;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    max-width: 250px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+}
+button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover {
+    background-color: #8383D4;
+}
+  .entry-footer .edit-link a {
+    background-color: #5050A2;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    max-width: 250px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+}
+.entry-footer .edit-link a:hover {
+    background-color:#8383D4;
+}
